# decode

./: CMakeLists.txt  Decode.pro  Info.plist  MainWindow.cpp  MainWindow.h  README.md  SettingsDialog.cpp  SettingsDialog.h  decode.icns  decode.rc  main.cpp  main.qml  resources.qrc
.github/workflows/: cmake-build.yml  cmake-macos.yml  cmake-ubuntu.yml
encoders/: AESCodec.cpp  AESCodec.h  Atbash.cpp  Atbash.h  Base64Codec.cpp  Base64Codec.h  BinaryCodec.cpp  BinaryCodec.h  CaesarCipher.cpp  CaesarCipher.h  HexCodec.cpp  HexCodec.h  MorseCodec.cpp  MorseCodec.h  PigLatin.cpp  PigLatin.h  RSACodec.cpp  RSACodec.h  Rot13.cpp  Rot13.h
src/: AppController.cpp  AppController.h  main.cpp  resources.qrc
src/encoders/: Atbash.cpp  Atbash.h  BinaryCodec.cpp  BinaryCodec.h  CaesarCipher.h  MorseCodec.h  PigLatin.cpp  PigLatin.h
